--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout 
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Fejléc -->
+    <!--
+    Fejléc sáv: alkalmazás címe
+    Fix magasság, középre igazított szöveg
+    -->
     <TextView
         android:id="@+id/headerTitle"
         android:layout_width="0dp"
@@ -22,7 +25,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- RecyclerView a hírekhez -->
+    <!--
+    RecyclerView a hírek listájának megjelenítésére
+    A fejléc és az alsó gomb között tölti ki a teret
+    -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerNews"
         android:layout_width="0dp"
@@ -33,16 +39,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/btnToCoins"/>
 
-    <!-- Navigációs gomb -->
+    <!--
+    Navigációs gomb a coin lista megnyitásához
+    Alul rögzítve
+    -->
     <Button
         android:id="@+id/btnToCoins"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-	    android:text="Jump 4 Main Crypto"
-	    android:textStyle="bold"
+        android:text="Jump 4 Main Crypto"
+        android:textStyle="bold"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--
+    Összefoglalás:
+    - ConstraintLayout biztosítja a rugalmas, képernyőméret-független elrendezést
+    - Fejléc felül rögzített címként működik
+    - RecyclerView dinamikus hírlistát jelenít meg
+    - Alsó gomb fragmentváltást indít a coin nézetre
+    -->
