--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--
+Egyetlen hír elem megjelenítése a RecyclerView listában
+-->
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,6 +11,9 @@
     android:padding="8dp"
     android:background="?attr/selectableItemBackground">
 
+    <!--
+    Egyszerű ikon a listaelejére (vizuális jelölés)
+    -->
     <TextView
         android:id="@+id/txtIcon"
         android:layout_width="wrap_content"
@@ -17,6 +24,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
+    <!--
+    Hír címe, amely a rendelkezésre álló helyet kitölti
+    -->
     <TextView
         android:id="@+id/txtHeadline"
         android:layout_width="0dp"
@@ -29,3 +39,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--
+    Összefoglalás:
+    - RecyclerView egyetlen sorának kinézete
+    - ConstraintLayout biztosítja az ikon és a cím vízszintes elrendezését
+    - selectableItemBackground kattintható vizuális visszajelzést ad
+    - Adapter tölti fel dinamikusan a hír címét
+    -->
